--- a/client/project.json
+++ b/client/project.json
@@ -25,7 +25,7 @@
           "client/src/styles.css"
         ],
         "scripts": [],
-        "webpackConfig": "@nrwl/react/plugins/webpack"
+        "webpackConfig": "client/webpack.config.js"
       },
       "configurations": {
         "development": {
