--- a/package.json
+++ b/package.json
@@ -10,11 +10,23 @@
     "@nestjs/common": "9.2.1",
     "@nestjs/core": "9.2.1",
     "@nestjs/platform-express": "9.2.1",
+    "@reduxjs/toolkit": "^2.8.2",
+    "bootstrap": "^5.3.7",
+    "buffer": "^6.0.3",
+    "global": "^4.4.0",
+    "https-browserify": "^1.0.0",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^9.2.0",
     "react-router": "^6.3.0",
     "react-router-dom": "6.4.3",
-    "tslib": "^2.3.0"
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "tslib": "^2.3.0",
+    "url": "^0.11.4",
+    "util": "^0.12.5"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.14.5",
@@ -68,7 +80,7 @@
     "ts-node": "10.9.1",
     "typescript": "4.8.4",
     "url-loader": "^4.1.1",
-    "webpack": "^5.75.0",
+    "webpack": "5.94.0",
     "webpack-merge": "^5.8.0"
   }
 }
