--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "6.4.3",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
+    "styled-components": "^6.1.19",
     "tslib": "^2.3.0",
     "url": "^0.11.4",
     "util": "^0.12.5"
