--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nestjs/platform-express": "9.2.1",
     "@reduxjs/toolkit": "^2.8.2",
     "bootstrap": "^5.3.7",
+    "bootstrap-icons": "^1.13.1",
     "buffer": "^6.0.3",
     "global": "^4.4.0",
     "https-browserify": "^1.0.0",
