--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "process": "^0.11.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-error-boundary": "^6.0.0",
     "react-redux": "^9.2.0",
     "react-router": "^6.3.0",
     "react-router-dom": "6.4.3",
