--- a/package.json
+++ b/package.json
@@ -2,22 +2,34 @@
   "name": "nrwl-coding-assignment",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "22.x"
+  },
   "scripts": {
     "start": "nx run-many --target=serve --projects=server,client",
     "test": "nx run-many --target=test --projects=server,client",
     "heroku-start": "node dist/apps/server/main.js",
-    "heroku-postbuild": "nx build server"
+    "heroku-postbuild": "NODE_ENV=production nx build server"
   },
   "dependencies": {
     "@nestjs/common": "9.2.1",
     "@nestjs/core": "9.2.1",
     "@nestjs/platform-express": "9.2.1",
     "@reduxjs/toolkit": "^2.8.2",
+    "@nrwl/cypress": "15.5.1",
+    "@nrwl/eslint-plugin-nx": "15.5.1",
+    "@nrwl/jest": "15.5.1",
+    "@nrwl/linter": "15.5.1",
+    "@nrwl/nest": "15.5.1",
+    "@nrwl/node": "15.5.1",
+    "@nrwl/react": "15.5.1",
+    "@nrwl/web": "15.5.1",
     "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
     "buffer": "^6.0.3",
     "global": "^4.4.0",
     "https-browserify": "^1.0.0",
+    "nx": "15.5.1",
     "path-browserify": "^1.0.1",
     "process": "^0.11.10",
     "react": "18.2.0",
@@ -37,14 +49,6 @@
     "@babel/preset-react": "^7.14.5",
     "@nestjs/schematics": "9.0.4",
     "@nestjs/testing": "9.2.1",
-    "@nrwl/cypress": "15.5.1",
-    "@nrwl/eslint-plugin-nx": "15.5.1",
-    "@nrwl/jest": "15.5.1",
-    "@nrwl/linter": "15.5.1",
-    "@nrwl/nest": "15.5.1",
-    "@nrwl/node": "15.5.1",
-    "@nrwl/react": "15.5.1",
-    "@nrwl/web": "15.5.1",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@svgr/webpack": "^6.1.2",
     "@swc/core": "~1.2.143",
@@ -72,7 +76,6 @@
     "jest": "28.1.3",
     "jest-environment-jsdom": "28.1.1",
     "jest-preset-angular": "12.2.3",
-    "nx": "15.5.1",
     "prettier": "^2.3.2",
     "react-refresh": "^0.10.0",
     "react-test-renderer": "18.2.0",
