Add CORS configuration for Firebase hosting

--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   "scripts": {
     "start": "nx run-many --target=serve --projects=server,client",
     "test": "nx run-many --target=test --projects=server,client",
-    "build:client": "nx build client",
+    "build:client": "NODE_ENV=production nx build client",
     "deploy:client": "firebase deploy --only hosting",
-    "heroku-start": "node dist/apps/server/main.js",
+    "build:server": "nx build server",
+    "serve:server": "node dist/server/main.js",
+    "heroku-start": "node dist/server/main.js",
     "heroku-postbuild": "NODE_ENV=production nx build server"
   },
   "dependencies": {
