feat: Refactor ticket components and add styled components for better organization

--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "@nestjs/common": "9.2.1",
     "@nestjs/core": "9.2.1",
     "@nestjs/platform-express": "9.2.1",
-    "@reduxjs/toolkit": "^2.8.2",
     "@nrwl/cypress": "15.5.1",
     "@nrwl/eslint-plugin-nx": "15.5.1",
     "@nrwl/jest": "15.5.1",
@@ -30,6 +29,7 @@
     "@nrwl/node": "15.5.1",
     "@nrwl/react": "15.5.1",
     "@nrwl/web": "15.5.1",
+    "@reduxjs/toolkit": "^2.8.2",
     "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
     "buffer": "^6.0.3",
@@ -44,6 +44,7 @@
     "react-redux": "^9.2.0",
     "react-router": "^6.3.0",
     "react-router-dom": "6.4.3",
+    "redux-mock-store": "^1.5.5",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "styled-components": "^6.1.19",
@@ -68,6 +69,7 @@
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "@types/react-router-dom": "5.3.3",
+    "@types/redux-mock-store": "^1.5.0",
     "@typescript-eslint/eslint-plugin": "5.48.2",
     "@typescript-eslint/parser": "5.48.2",
     "css-loader": "^6.4.0",
